# obs-game-audio-trigger

./: BUILD.md  CMakeLists.txt  LICENSE  README.md  SETUP.md  USAGE.md
data/locale/: en-US.ini  ja-JP.ini
src/: audio-player.cpp  audio-player.h  game-audio-trigger.cpp  game-audio-trigger.h  image-matcher.cpp  image-matcher.h  miniaudio.h  plugin-main.cpp  process-detector.cpp  process-detector.h
